--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -38,20 +38,19 @@
           <items>
           	<!-- When the button New is clicked, it call actionNew because onAction-->
           	<!-- I did not associate function to most of the buttons (except the button New and Go). Go ahead and edit if you need it -->
-            <MenuItem mnemonicParsing="false" onAction="#actionNew" text="New (call Controller.actionNew())" />
+            <MenuItem mnemonicParsing="false" onAction="#actionNew" text="Last Search" />
             <MenuItem mnemonicParsing="false" text="Open" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" onAction="#actionClose" text="Close" />
             <MenuItem mnemonicParsing="false" text="Save" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" onAction="#actionQuit" text="Quit" />
-            <MenuItem mnemonicParsing="false" onAction="#actionAboutTeam" text="About Sudo Korean" />
             
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
           <items>
-            <MenuItem mnemonicParsing="false" text="About Your Team" />
+            <MenuItem mnemonicParsing="false" onAction="#actionAboutTeam" text="About Your Team" />
           </items>
         </Menu>
       </menus>
