--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -38,10 +38,10 @@
           <items>
           	<!-- When the button New is clicked, it call actionNew because onAction-->
           	<!-- I did not associate function to most of the buttons (except the button New and Go). Go ahead and edit if you need it -->
-            <MenuItem mnemonicParsing="false" onAction="#actionNew" text="Last Search" />
+            <MenuItem fx:id="revertButton" disable="true" mnemonicParsing="false" onAction="#actionNew" text="Last Search" />
             <MenuItem mnemonicParsing="false" text="Open" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" onAction="#actionClose" text="Close" />
+            <MenuItem fx:id="closeButton" mnemonicParsing="false" onAction="#actionClose" text="Close" />
             <MenuItem mnemonicParsing="false" text="Save" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" onAction="#actionQuit" text="Quit" />
@@ -64,7 +64,7 @@
                         <TextField fx:id="textFieldKeyword" layoutX="14.0" layoutY="36.0" prefHeight="25.0" prefWidth="131.0" promptText="Keyword" />
                         <!--  this is the Go button. When it is clicked, it calls Controller.actionSearch() -->
                         <Button fx:id="goButton" layoutX="145.0" layoutY="36.0" mnemonicParsing="false" onAction="#actionSearch" prefHeight="25.0" prefWidth="40.0" text="Go" />
-                        <Button fx:id="refineButton" disable="false" layoutX="128.0" layoutY="67.0" mnemonicParsing="false" onAction="#refineSearch" prefHeight="25.0" prefWidth="57.0" text="Refine" />
+                        <Button fx:id="refineButton" disable="true" layoutX="128.0" layoutY="67.0" mnemonicParsing="false" onAction="#refineSearch" prefHeight="25.0" prefWidth="57.0" text="Refine" />
                      </children>
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
